# rust-image-api

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Rocket.toml  fly.toml  mise.toml
.github/workflows/: build.yml  docker-publish.yml
src/: main.rs
src/routes/: blur.rs  brighten.rs  convert.rs  crop.rs  flip.rs  grayscale.rs  invert.rs  mod.rs  next_image.rs  resize.rs  rotate.rs  unsharpen.rs
src/utils/: http.rs  middleware.rs  mod.rs
templates/: test.html
