[package]
name = "image-api"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = "0.11.17"
image = { version = "0.24.6", features = ["png", "jpeg", "webp-encoder"] }
md5 = "0.7.0"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
futures-util = "0.3.28"
